Fix T74392: HDRI preview spheres appear in render passes and reflections

Do not render HDRI Previews when a renderpass is active

Reviewed By: fclem

Differential Revision: https://developer.blender.org/D7005